refactor: replace JSR annotations with JSpecify annotations and update variable declarations for clarity chore: add errorprone and nullaway